# control-reflexxes

./: CMakeLists.txt  README.txt
Windows/: ReflexxesTypeII_ExampleProject.sln
include/: RMLFlags.h  RMLInputParameters.h  RMLOutputParameters.h  RMLPositionFlags.h  RMLPositionInputParameters.h  RMLPositionOutputParameters.h  RMLVector.h  RMLVelocityFlags.h  RMLVelocityInputParameters.h  RMLVelocityOutputParameters.h  ReflexxesAPI.h  TypeIIRMLDecisionTree1A.h  TypeIIRMLDecisionTree1B.h  TypeIIRMLDecisionTree1C.h  TypeIIRMLDecisionTree2.h  TypeIIRMLDecisions.h  TypeIIRMLMath.h  TypeIIRMLPolynomial.h  TypeIIRMLPosition.h  TypeIIRMLQuicksort.h  TypeIIRMLStep1IntermediateProfiles.h  TypeIIRMLStep1Profiles.h  TypeIIRMLStep2IntermediateProfiles.h  TypeIIRMLStep2Profiles.h  TypeIIRMLStep2WithoutSynchronization.h  TypeIIRMLVelocity.h
src/: CMakeLists.txt
src/RMLPositionSampleApplications/: 01_RMLPositionSampleApplication.cpp  02_RMLPositionSampleApplication.cpp  03_RMLPositionSampleApplication.cpp  07_RMLPositionSampleApplication.cpp  CMakeLists.txt
src/RMLVelocitySampleApplications/: 04_RMLVelocitySampleApplication.cpp  05_RMLVelocitySampleApplication.cpp  06_RMLVelocitySampleApplication.cpp  08_RMLVelocitySampleApplication.cpp  CMakeLists.txt
src/TypeIIRML/: CMakeLists.txt  ReflexxesAPI.cpp  TypeIIRMLCalculatePositionalExtrems.cpp  TypeIIRMLDecisionTree1A.cpp  TypeIIRMLDecisionTree1B.cpp  TypeIIRMLDecisionTree1C.cpp  TypeIIRMLDecisionTree2.cpp  TypeIIRMLDecisions.cpp  TypeIIRMLFallBackStrategy.cpp  TypeIIRMLIsPhaseSynchronizationPossible.cpp  TypeIIRMLPolynomial.cpp  TypeIIRMLPosition.cpp  TypeIIRMLQuicksort.cpp  TypeIIRMLSetupModifiedSelectionVector.cpp  TypeIIRMLStep1.cpp  TypeIIRMLStep1IntermediateProfiles.cpp  TypeIIRMLStep1Profiles.cpp  TypeIIRMLStep2.cpp  TypeIIRMLStep2IntermediateProfiles.cpp  TypeIIRMLStep2PhaseSynchronization.cpp  TypeIIRMLStep2Profiles.cpp  TypeIIRMLStep2WithoutSynchronization.cpp  TypeIIRMLStep3.cpp  TypeIIRMLVelocity.cpp  TypeIIRMLVelocityCalculatePositionalExtrems.cpp  TypeIIRMLVelocityFallBackStrategy.cpp  TypeIIRMLVelocityIsPhaseSynchronizationPossible.cpp  TypeIIRMLVelocityMethods.cpp  TypeIIRMLVelocitySetupPhaseSyncSelectionVector.cpp  reflexxes.pc.in
